update name to publish on npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipelines.js",
+  "name": "@paullaffitte/pipelines.js",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:paullaffitte/pipelines.js.git",
